2008-04-14 16:52:59    <timj@imendio.com>

	* src/hildon-banner.c: guard force_to_wrap_truncated() against
	operating on unrealized widgets, fixes:
	Bug 83953 - Lock dialog is not visible when device is locked for the first time after flash

	* src/hildon-banner-private.h: coalesce boolean fields into bitfield.

2008-04-09  Kristian Rietveld  <kris@imendio.com>

	Fixes: NB#77775: Media Player, Save Now playing list, too long name
	makes banner disappear.
	Fixes: NB#79182: info banner flickering with certain message lengts.

	* src/hildon-banner.c (hildon_banner_constructor),
	(hildon_banner_init), (hildon_banner_set_text),
	(hildon_banner_set_markup): call hildon_banner_reset_wrap_state(),
	(hildon_banner_reset_wrap_state): new function: reset wrap flags to
	FALSE, reset size requests of label and banner,
	(force_to_wrap_truncated): when the text is too wide, always enforce
	the maximum possible width instead of recalculating it from the
	layout; enforce the maximum banner height of 3 lines,
	(hildon_banner_init): set WORD_CHAR wrapping, this will result in
	nicer wrapping and no truncated chars if space gets tight.

	* src/hildon-banner-private.h: add has_been_wrapped and
	has_been_truncated fields.

2008-04-07  Sven Herzberg  <sven@imendio.com>

	Fixes: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: moved the real allocation code into the
	if() branch

2008-04-07  Sven Herzberg  <sven@imendio.com>

	Prepares: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: merged the two if() branches together

2008-04-07  Sven Herzberg  <sven@imendio.com>

	Prepares: NB#78896: libhildon code inspection/coverity: uninitialised
	local values in hildon_date_editor_size_allocate

	* src/hildon-date-editor.c: changed the arguments of the if()
	conditions

2008-04-07  Sven Herzberg  <sven@imendio.com>
